--- a/src/main/webapp/sequence/activity/systematizationActivity.xhtml
+++ b/src/main/webapp/sequence/activity/systematizationActivity.xhtml
@@ -24,8 +24,12 @@
     <ui:define name="content">
         <h2>Activité de Systématisation</h2>
         <p class="text-justify">
-            <!--@TODO Change if necessary-->    
-            Trouvez les groupes nominaux avec la même couleur.
+            <!--@TODO Change if necessary-->
+            Dans cette activité, vous allez d'abord faire des inférences par rapport aux chaînes de coréférence que vous
+            avez travaillé dans la phase précédente. Vous allez chercher les couleurs par rapport aux éléments qui manquent
+            dans les séries, c'est-à-dire, dans chacune des chaînes de coréférence représentées.
+            <br/>
+            Selon la couleur sélectionnée, un groupe d'options sera disponible.
         </p>
         <h:form id="spottingActivityForm">
             <p:growl id="growl" showDetail="true" sticky="true" />  
