--- a/src/main/webapp/sequence/activity/systematizationActivity2.xhtml
+++ b/src/main/webapp/sequence/activity/systematizationActivity2.xhtml
@@ -24,8 +24,12 @@
     <ui:define name="content">
         <h2>Activité de Systématisation</h2>
         <p class="text-justify">
-            <!--@TODO Change if necessary-->    
-            Trouvez les groupes nominaux avec la même couleur.
+            <!--@TODO Change if necessary-->
+            Une fois que les couleurs ont été sélectionnés, vous allez choisir les groupes nominaux, les noms et les
+            pronoms afin de compléter toutes les chaînes de coréférence représentées. Si tous les éléments ont été
+            placés correctement un message de feed-back s'affichera et les éléments se mettront selon les couleurs de
+            chaque chaîne, sinon, il faudra continuer l'activité jusqu'à que tous les éléments aient atteint une couleur
+            spécifique.
         </p>
         <h:form id="spottingActivityForm">
             <p:growl id="growl" showDetail="true" sticky="true" />  
