--- a/src/main/webapp/sequence/activity/spottingActivity.xhtml
+++ b/src/main/webapp/sequence/activity/spottingActivity.xhtml
@@ -8,7 +8,7 @@
                 xmlns:f="http://java.sun.com/jsf/core">
 
     <f:metadata>
-        <f:viewParam name="idActivity" value="#{spottingActivityBean.idActivity}"/>
+        <f:viewParam name="idSequence" value="#{spottingActivityBean.idSequence}"/>
         <f:event type="preRenderView" listener="#{spottingActivityBean.preRenderView()}" />
     </f:metadata>
 
@@ -122,7 +122,7 @@
             <div class="span3">
                 <div id="next" style="display: none;">
                     <h:link id="nextButton" outcome="spottingActivity2" value="Continuer" styleClass="btn btn-danger" >
-                        <f:param name="idActivity" value="#{spottingActivityBean.idActivity}"/>
+                        <f:param name="idSequence" value="#{spottingActivityBean.idSequence}"/>
                     </h:link>
                 </div>
             </div>
