--- a/src/main/webapp/sequence/activity/spottingActivity2.xhtml
+++ b/src/main/webapp/sequence/activity/spottingActivity2.xhtml
@@ -8,7 +8,7 @@
                 xmlns:f="http://java.sun.com/jsf/core">
 
     <f:metadata>
-        <f:viewParam name="idActivity" value="#{spottingActivityBean2.idActivity}"/>
+        <f:viewParam name="idSequence" value="#{spottingActivityBean2.idSequence}"/>
         <f:event type="preRenderView" listener="#{spottingActivityBean2.preRenderView()}" />
     </f:metadata>
 
@@ -153,7 +153,7 @@
             <div class="span3">
                 <div id="next" style="display: none;margin: 10px 0px;">
                     <h:link id="nextButton" outcome="spottingActivity3" value="Continuer" styleClass="btn btn-danger" >
-                        <f:param name="idActivity" value="#{spottingActivityBean2.idActivity}"/>
+                        <f:param name="idSequence" value="#{spottingActivityBean2.idSequence}"/>
                     </h:link>
                 </div>
             </div>
