--- a/src/main/webapp/sequence/activity/systematizationActivity3.xhtml
+++ b/src/main/webapp/sequence/activity/systematizationActivity3.xhtml
@@ -9,7 +9,7 @@
                 xmlns:f="http://java.sun.com/jsf/core">
 
     <f:metadata>
-        <f:viewParam name="idActivity" value="#{spottingActivityBean3.idActivity}"/>
+        <f:viewParam name="idSequence" value="#{spottingActivityBean3.idSequence}"/>
         <f:event type="preRenderView" listener="#{spottingActivityBean3.preRenderView()}"/>
     </f:metadata>
 
@@ -200,7 +200,7 @@
             <div class="span3">
                 <div id="next" style="display: none;margin: 10px 0px;">
                     <h:link id="nextButton" outcome="supports" value="Continuer" styleClass="btn btn-danger">
-                        <f:param name="idActivity" value="#{spottingActivityBean3.idActivity}"/>
+                        <f:param name="idSequence" value="#{spottingActivityBean3.idSequence}"/>
                     </h:link>
                 </div>
             </div>
