--- a/src/main/webapp/sequence/activity/systematizationActivity2.xhtml
+++ b/src/main/webapp/sequence/activity/systematizationActivity2.xhtml
@@ -8,7 +8,7 @@
                 xmlns:f="http://java.sun.com/jsf/core">
 
     <f:metadata>
-        <f:viewParam name="idActivity" value="#{systematizationActivityBean2.idActivity}"/>
+        <f:viewParam name="idSequence" value="#{systematizationActivityBean2.idSequence}"/>
         <f:event type="preRenderView" listener="#{systematizationActivityBean2.preRenderView()}" />
     </f:metadata>
 
@@ -144,7 +144,7 @@
             <div class="row">
                 <div id="next" style="display: none;margin: 10px 0px;">
                     <h:link id="nextButton" outcome="systematizationActivity3" value="Continuer" styleClass="btn btn-danger" >
-                        <f:param name="idActivity" value="#{systematizationActivityBean2.idActivity}"/>
+                        <f:param name="idSequence" value="#{systematizationActivityBean2.idSequence}"/>
                     </h:link>
                 </div>
             </div>
